--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=todo
+
+# Active profile
+spring.profiles.active=dev
+
+# Database Configuration
+spring.datasource.url=jdbc:sqlite:todo.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA Configuration
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# H2 Console (for development)
+
+# Server port
+server.address=0.0.0.0
+server.port=8000
